Style - Collapse : Animation -Fix Bug

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -44,8 +44,8 @@
   text-align: justify;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  transition: max-height 0.5s ease-out, opacity 0.3s ease-in-out,
-    padding 0.7s ease-out;
+  transition: max-height 0.1s ease-out, opacity 0.3s ease-out,
+    padding 0.3s ease-out;
   position: relative;
   top: 0;
   z-index: 1;
@@ -66,5 +66,14 @@
     max-height: 0;
     opacity: 0;
     padding: 0 20px;
+  }
+}
+
+@media (max-width: 630px) {
+  .collapse-content {
+    &.open,
+    &.closed {
+      font-size: 12px;
+    }
   }
 }
